# wiggle-bin

./: .gitignore  Build-Bin.md  Build-Electronics-I2C.md  Build-Electronics.md  Build-WiggleBin.md  Plan.md  README.md  okh-manifest.yml
Code/EspHome/: WiggleBinSoilSensorComponent.h  wigglebin.yaml  wigglecamera.yaml  wigglemonitor.yaml
Code/WiggleBinSerial/: WiggleBinSerial.ino
Code/WiggleBinWebThings/: WiggleBinWebThings.ino
Design/BatteryHolder/: BatteryHolder.f3d  BatteryHolder.gcode  BatteryHolder.stl
Design/DigitLedDisplayBox/: DigitLedDisplayBox.dxf  LaserCutTest.dxf
Design/Hinges/: Hinges.3mf  Hinges.f3d  Hinges.gcode  Hinges.stl
Design/LaserCutLid/: LaserCutLid.dxf
Design/PicoHolder/: PicoHolder.f3d
Design/SoilSensorWaterProofCap/: SoilSensorWaterProofCap.3mf  SoilSensorWaterProofCap.f3d
Design/WiggleBinLight/: WiggleBinLight.fzz
Design/WiggleBinSoilSensor/: WiggleBinSoilSensor.fzz
Research/: README.md
Research/Test-SensorInOrAboveSoil/: Test-SensorInOrAboveSoil.fzz  Test-SensorInOrAboveSoil.ino
WiggleAlert/: README.md
WiggleBin/: README.md
WiggleR/: README.md
WiggleR/Code/Api/: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
WiggleR/Code/Api/Camera/: contoursTest.py  detectWormsOpenCv.py  diff.py  timelapse.py
WiggleR/Code/Api/wiggler/: cli.py  main.py
WiggleR/Code/Api/wiggler/display/: auto_slider.py  pot_slider.py
WiggleR/Code/Api/wiggler/light/: pixels.py
WiggleR/Code/Api/wiggler/service/: wiggler.service  wiggler_boot.sh
WiggleR/Code/Api/wigglerapi/: cli.py  main.py
WiggleR/Design/: RaspberryFritzing.fzz
(+85 files in other folders)
